# mcp_hub

./: .gitignore  .google-cookie  README.md  main.py  mcp_client.py  mcp_server.py  pyproject.toml  test.py
tools/: dummy.py  search.py  summarize_web_content.py  weather.py  web_content.py
utils/: __init__.py  chunking.py  config.json  embed_model.py  get_config.py  get_html.py  search_google.py  text_preprocessing.py  vector_store.py
