[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "google>=3.0.0",
    "google-genai>=1.16.1",
    "googlesearch-python>=1.3.0",
    "mcp[cli]>=1.9.1",
    "pydantic>=2.11.5",
    "qdrant-client>=1.14.2",
    "sentence-transformers>=4.1.0",
]
