[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.6.3",
    "fastapi>=0.115.12",
    "googlesearch-python>=1.3.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.1",
    "openai>=1.82.0",
    "pydantic>=2.11.5",
    "qdrant-client>=1.14.2",
    "sentence-transformers>=4.1.0",
]
